test_data/Xml/Unexpected/Unserializable/InvalidClassName/assetAdministrationShell/wrong.xml.exception
Expected an element representing an instance of class AssetAdministrationShell with element name assetAdministrationShell, but got: utterlyInvalid at: the beginning